anna (0.036) UNRELEASED; urgency=low

  * DO NOT UPLOAD
  * Sebastian Ley
    - If anna loads a new retriever, exit with statuscode 10 to leave it
      unconfigured, and hence be started again. This is needed for the floppy
      install where anna has to run twice.
  * Bastian Blank
    - port to new libdebian-installer api version 4.
  * Bart Cornelis
    - incorporated comments from debian-l10n-dutch review process in dutch 
      translation
  * Alastair McKinstry
    - Convert Changelog to UTF-8 as per policy.
  * Petter Reinholdtsen
    - Make menu entry translatable.
  * Pierre Machard
    - Update French po-debconf translation.
  * Kenshi Muto
    - Update Japanese po (ja.po)

 -- Bart Cornelis <cobaco@bartLaptop>  Sun, 28 Sep 2003 14:35:06 +0200

anna (0.035) unstable; urgency=low

  * Petter Reinholdtsen
    - Added Russian debconf template translation (ru.po),
      patch from Serge Winitzki.
  * Christian Perrier
    - Updated debian/po/fr.po
  * Steinar H. Gunderson
    - Don't display udebs that have no menu item.
    - Update nb.po.
  * Jordi Mallach
    - Added Catalan (ca) translation.
  * Kenshi Muto
    - Update ja.po
  * Andre Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Bart Cornelis
    - updated dutch translation

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 27 Sep 2003 10:01:46 +0200

anna (0.034) unstable; urgency=low

  * Kenshi Muto
    - Added Japanese translation (ja.po)

 -- Petter Reinholdtsen <pere@debian.org>  Fri,  5 Sep 2003 23:02:29 +0200

anna (0.033) unstable; urgency=low

  * Alastair McKinstry
    - Move to UTF-8 changelog, for Standards-Version 3.6.0
  * Aigars Mahinovs
    - Added latvian translation (lv.po)
  * Giuseppe Sacco
    - Added italian translation (it.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 27 Jul 2003 00:23:09 +0200

anna (0.032) unstable; urgency=low

  * Martin Sjögren
    - Add Release file parsing.
  * Alastair McKinstry
    - Remove unneeded menutest
