@@ -9,6 +9,6 @@ Standards-Version: 3.6.0
 Package: anna
 Architecture: any
 XB-Installer-Menu-Item: 25
-Depends: libc-udeb, cdebconf-udeb, retriever
+Depends: libc-udeb, cdebconf-udeb, retriever, archdetect
 Description: Load installer modules
  anna's not nearly apt, but for the Debian installer, it will do.
