@@ -6,7 +6,9 @@ anna (0.036) UNRELEASED; urgency=low
       unconfigured, and hence be started again. This is needed for the floppy
       install where anna has to run twice.
   * Bastian Blank
-    - port to new libdebian-installer api version 4.
+    - Port to new libdebian-installer api version 4.
+    - Add dependency to archdetect.
+    - Add support for subarchitectures.
   * Bart Cornelis
     - incorporated comments from debian-l10n-dutch review process in dutch 
       translation
@@ -19,7 +21,7 @@ anna (0.036) UNRELEASED; urgency=low
   * Kenshi Muto
     - Update Japanese po (ja.po)
 
- -- Bart Cornelis <cobaco@bartLaptop>  Sun, 28 Sep 2003 14:35:06 +0200
+ -- Bastian Blank <waldi@debian.org>  Fri, 03 Oct 2003 19:30:04 +0200
 
 anna (0.035) unstable; urgency=low
 
